refactored optional use in services